--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -339,10 +339,10 @@
 
                       <!-- Attendance Summary -->
                       <section id="attendanceSummaryCard"
-                            class="bg-white border border-gray-200 rounded-2xl p-3 lg:col-start-2 max-w-md ml-auto mt-6">
+                             class="bg-white border border-gray-200 rounded-2xl p-3 att-square lg:col-start-2 lg:justify-self-end">
                       <div class="flex items-center justify-between mb-2">
-                        <h3 class="text-base font-semibold">Attendance Summary</h3>
-                        <span class="material-icons text-gray-500 text-base">pie_chart</span>
+                        <h3 class="text-sm font-semibold">Attendance Summary</h3>
+                        <span class="material-icons text-gray-500 text-sm">pie_chart</span>
                       </div>
                       <div class="gauge-wrap">
                         <canvas id="attendanceGauge"></canvas>
@@ -352,7 +352,6 @@
                     </section>
                   </div>
                 </div>
-              </div>
           </section>
 
 
