--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -351,7 +351,18 @@
                       </div>
                     </section>
                   </div>
-                </div>
+                  <section id="attendanceSummaryClone"
+                        class="bg-white border border-gray-200 rounded-2xl p-3 mt-6"
+                        style="width: 350px; height: 170px; margin-left: auto;">
+                  <div class="flex items-center justify-between mb-2">
+                    <h3 class="text-sm font-semibold">Clone Summary</h3>
+                    <span class="material-icons text-gray-500 text-sm">pie_chart</span>
+                  </div>
+                  <div class="clone-content">
+                    This is a clone of the attendance summary card.
+                  </div>
+                </section>
+            </div>
           </section>
 
 
